plugins {
    id 'application'
}

sourceCompatibility = 1.17
targetCompatibility = 1.17

project.ext.lwjglVersion = "3.3.3"
project.ext.jomlVersion = "1.10.5"
project.ext.lwjgl3_awtVersion = "0.1.8"
project.ext.lwjglNatives = "natives-windows"

repositories {
    mavenCentral()
    maven {
        url "https://s01.oss.sonatype.org/content/repositories/snapshots/"
    }
}

dependencies {
	implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")

	implementation "org.lwjgl:lwjgl"
	implementation "org.lwjgl:lwjgl-assimp"
	implementation "org.lwjgl:lwjgl-bgfx"
	implementation "org.lwjgl:lwjgl-glfw"
	implementation "org.lwjgl:lwjgl-nanovg"
	implementation "org.lwjgl:lwjgl-nuklear"
	implementation "org.lwjgl:lwjgl-openal"
	implementation "org.lwjgl:lwjgl-opengl"
	implementation "org.lwjgl:lwjgl-par"
	implementation "org.lwjgl:lwjgl-stb"
	implementation "org.lwjgl:lwjgl-vulkan"
	runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
	runtimeOnly "org.lwjgl:lwjgl-assimp::$lwjglNatives"
	runtimeOnly "org.lwjgl:lwjgl-bgfx::$lwjglNatives"
	runtimeOnly "org.lwjgl:lwjgl-glfw::$lwjglNatives"
	runtimeOnly "org.lwjgl:lwjgl-nanovg::$lwjglNatives"
	runtimeOnly "org.lwjgl:lwjgl-nuklear::$lwjglNatives"
	runtimeOnly "org.lwjgl:lwjgl-openal::$lwjglNatives"
	runtimeOnly "org.lwjgl:lwjgl-opengl::$lwjglNatives"
	runtimeOnly "org.lwjgl:lwjgl-par::$lwjglNatives"
	runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
	implementation "org.joml:joml:${jomlVersion}"
	implementation "org.lwjglx:lwjgl3-awt:${lwjgl3_awtVersion}"	
	implementation "io.github.andrewauclair:modern-docking-single-app:0.11.3"	
	implementation 'org.apache.commons:commons-lang3:3.11'
	implementation 'commons-io:commons-io:2.16.1'
	implementation 'org.reflections:reflections:0.10.2'
	implementation 'com.google.code.gson:gson:2.11.0'
	implementation 'com.formdev:flatlaf:3.5'
}

application {
    mainClass = 'com.codeshaper.jello.editor.JelloEditor'
}

jar {
    archiveBaseName = 'Jello-Editor'
    archiveVersion = '0.0'
    manifest {
        attributes 'Main-Class': 'com.codeshaper.jello.editor.JelloEditor'
    }
}